# speed-test-wasm-ws-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: rust.yml
client/: Cargo.toml  index.html
client/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/src/: messages.proto
server/: Cargo.toml
server/src/: main.rs
