[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-ws = "0.3"
prost = "0.14.1"
tokio = { version = "1", features = ["full"] }
proto = { path = "../proto" }
crossterm = "0.29"
ratatui = "0.29"
futures-util = { version = "0.3", features = ["sink"] }
actix-files = "0.6.6"
